<resources>
    <string name="app_name">Monta Palavras</string>
    <string name="presentation">Digite as letras disponíveis nesta jogada</string>
    <string name="hint">Letras disponíveis</string>
    <string name="score">Palavra de %1$d pontos</string>
    <string name="remain_label">sobraram</string>
    <string name="word_letters">%1$s</string>
    <string name="ok_label">OK</string>
    <string name="remain_label_letters">%1$s</string>
</resources>
